--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,14 +5,149 @@
   |============================
 */
 /* Common styles */
-@import url('./reset.css');
+/* @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
 @import url('./animations.css');
 
 /* Sections style */
-@import url('./header.css');
+/* @import url('./header.css');
 @import url('./vite-promo.css');
 @import url('./badges.css');
 @import url('./back-link.css');
-@import url('./footer.css');
+@import url('./footer.css'); */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 24px 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+button {
+  display: inline-flex;
+  cursor: pointer;
+  width: 95px;
+  height: 40px;
+  background: #4e75ff;
+  border-radius: 8px;
+  border: none;
+  color: #ffffff;
+  font-style: normal;
+  font-family: Montserrat;
+  padding: 8px 16px;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.64px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 16px;
+}
+
+button:hover {
+  background: #6c8cff;
+}
+
+input {
+  height: 40px;
+  width: 360px;
+  border-radius: 4px;
+  gap: 8px;
+  flex-shrink: 0;
+  border: 1px solid #808080;
+}
+
+input:hover {
+  border-radius: 4px;
+  border: 1px solid #000;
+}
+
+label {
+  color: #2e2f42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.64px;
+  display: flex;
+  flex-direction: column;
+}
+
+textarea {
+  width: 360px;
+  height: 80px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #808080;
+}
+
+form {
+  padding-left: 24px;
+}
+.feedback-form {
+  display: block;
+  max-width: 100%;
+  align-items: flex-start;
+  gap: 8px;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  min-width: 1128px;
+  margin: 0 auto;
+  gap: 24px;
+  row-gap: 24px;
+}
+
+.gallery-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
+  transition: transform 0.3s ease; /* Додає плавний перехід */
+}
+
+.gallery-image:hover {
+  transform: scale(1.05); /* Збільшуємо зображення на 5% */
+}
